--- a/views/tasks/tasks5.html
+++ b/views/tasks/tasks5.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>Task 5</title>
@@ -13,9 +8,21 @@ and open the template in the editor.
     <body>
         <ul>
             <li>1. Что за nbproject в папке web? У тебя что, проект в папке web имеет корень? Приложи скрин дерева проекта своего. Типа такого <img src="/img/5_0.png" width="250">
+            <li><p><font color = 'red'>
+                    Таки был косяк. Удалил nbproject из web, а после перезапуска NB она там опять появилась.
+                <p><font color = 'black'>
                 <ul>
                     <li>1.1. Поправить если нужно что бы корень был в папке проэкта (родитель /web)</li>
+                    <li><p><font color = 'red'>
+                            Кажись поправил.
+                        <p><font color = 'black'>
+                            <br><img src="/img/5_1.png" width="250">
                     <li>1.2. Почитать про файл .gitignore. Познакомиться с ним. Все что связанно с нетбинс не включаем в репозиторий. И вообще у тебя не должно быть физически в твоей папке /web/nbproject/ Иначе у тебя не правильно будет работать проект, и ты не получиш главных фич нетбинса. Я гляну потом по тимвьювер работает ли ок</li>
+                    <li><p><font color = 'red'>
+                            Тут ты уже дописал в .gitignore
+                            <br>/nbproject<br>
+                            /web/nbproject/private/
+                        <p><font color = 'black'>
                     <li>1.3. Мне лениво каждый раз создавать тег картинки. Давай сделаем ImageService который будет фигачить это за меня.
                         <ul>
                             <li>1.3.1. Создать его</li>
@@ -23,6 +30,9 @@ and open the template in the editor.
                             <li>1.3.3. Создать статический метод getImgTag() Куда можно передавать параметры: имя изображения, расширение (по умолчанию делаем png, значение по-умолчанию задаем непосредственно в аргументе когда описываем метод), ширину (по умолчанию 250px), высоту (не обязательный аргумент)</li>
                             <li>1.3.4. Метод должен вернуть мне строку типа такой &lt;img src="/img/5_0.png" width="250"&gt;. То есть я даю методу имя файла и ехая результат у меня отрисует картинку сразу.</li>
                             <li>1.3.5. Внутри должен быть метод getImgFolderPath(). По-умолчанию он возвращает /img/. Он будет юзаться в нашем getImgTag поянтное дело.</li>
+                            <li><p><font color = 'red'>
+                                    Не догнал зачем getImgFolderPath()? Я попытался с его помощью реализовать возможность закидывать адресс другой папки с последующим выводом картинки из нового места, но у меня не получилось.
+                                <p><font color = 'black'>
                         </ul>
                     </li>
                 </ul>
@@ -47,6 +57,8 @@ and open the template in the editor.
                     </li>
                 </ul>
             </li>
+            <li><p><font color = 'red'> Теперь дошло ))
+                  <p><font color = 'black'>
             <li>3. По taskService. Хорошо, реализовано корректно. Только давай немного спрячем реализацию логики. Зачем на в индексе перебор файлов, их вывод итд?
                 <ul>
                     <li>3.1. Создаем метод renderTasksList(). Думаю по имени понятно что он должен делать. Переносим в него форич и эхаем списко файлов. В индексе просто его вызываем.</li>
