--- a/views/tasks/7.html
+++ b/views/tasks/7.html
@@ -39,6 +39,16 @@ and open the template in the editor.
             Это копия твоей базы данной, я смогу ее себе развернуть и у меня будет точно та же бд что и у тебя, с таблицей user, и подной записью в ней с name=admin<br>
 <br>
 <br>
+
+В пхп современный способо общаться с бд - это встроенный класс PDO.<br>
+Сейчас задача вывести всех пользователей на экран.<br>
+1. Создаем папку dao<br>
+2. Создаем класс UserDao<br>
+3. По запросу /user должно понятное дело зайти в юзер контроллер индекс. Там создаем экземпляр userDao. Вызываем его метод getUsers()<br>
+4. В гетЮзерс. https://www.php.net/manual/ru/pdo.connections.php Создаем обьект пдо, подключаемся к бд. Херачим запрос вытянуть всех пользователей. Возвращаем результат этого запроса.<br>
+5. ВарДампим результат. То есть у тебя будт в actionIndex в $result = $userDao->getUsers(); var_dump($users); die;<br>
+Логинимся к бд user root, password пустой ''.<br>
+
         </div>
     </body>
 </html>
