--- a/views/tasks/9.html
+++ b/views/tasks/9.html
@@ -14,8 +14,11 @@ and open the template in the editor.
         <div>
             Теперь давай форму заюзаем. Что бы я мог ввести логин и пароль и мне вардампнуло юзера по введенным данным. А если я нет то писало нет такого.<br>
             Почитай про https://developer.mozilla.org/ru/docs/Web/HTTP/Methods<br>
+            - Re: Вот на этом моменте все понятно. И что нужно сделать, и при помощи каких инструментов.<br>
             Стандартный это get, когда мы шлем какую-то форму с данным то обычно юзается post.<br>
             Нужно что бы userController actionIndex если get запрос то выводил форму (два инпута под логин и пароль + кнопку), а если пост - то тогда брал исходя из данных юзера и вардампил его.<br>
+            - Re: А вот после этого вынесло мозг. "если get запрос то выводил форму" Какой get запрос? Откуда он взялся? "а если пост - то тогда брал исходя из данных юзера" Что брал?
+            Тут, явно, пояснение что и где должно находится, и как взаимодействовать между собой, но я нихрена не понял. ))<br>
         </div>
     </body>
 </html>
