--- a/views/tasks/9.html
+++ b/views/tasks/9.html
@@ -15,10 +15,31 @@ and open the template in the editor.
             Теперь давай форму заюзаем. Что бы я мог ввести логин и пароль и мне вардампнуло юзера по введенным данным. А если я нет то писало нет такого.<br>
             Почитай про https://developer.mozilla.org/ru/docs/Web/HTTP/Methods<br>
             - Re: Вот на этом моменте все понятно. И что нужно сделать, и при помощи каких инструментов.<br>
+            <span style="color:brown">Ничего делать не нужно. Просто когда тебе приходит запрос в пхп от сервера. Он всегда имеет метод (тип). Это просто подписывает браузер, или тот кто шлет запрос типа вот запрос типа ГЕТ, а вот запрос типа ПОСТ.<br> В пхп есть даже два отдельных встроенных массива под данные с разных запросов $_GET, $_POST. Ты когда форму создаешь там есть аттрибут у формы method. <form method="POST (или гет)"></form> Вот когда ворму сабмитят то запрос на сервер уйдет как раз помечен этим методом </span><br>
             Стандартный это get, когда мы шлем какую-то форму с данным то обычно юзается post.<br>
             Нужно что бы userController actionIndex если get запрос то выводил форму (два инпута под логин и пароль + кнопку), а если пост - то тогда брал исходя из данных юзера и вардампил его.<br>
             - Re: А вот после этого вынесло мозг. "если get запрос то выводил форму" Какой get запрос? Откуда он взялся? "а если пост - то тогда брал исходя из данных юзера" Что брал?
             Тут, явно, пояснение что и где должно находится, и как взаимодействовать между собой, но я нихрена не понял. ))<br>
+            <span style="color:brown">Если что-то не ясно, сразу вспоминаем гугл и смотрим/читаем что бы примерно понять о чем <a href="https://www.google.com/search?client=firefox-b-d&q=%D1%87%D1%82%D0%BE+%D1%82%D0%B0%D0%BA%D0%BE%D0%B5+get+post+%D0%B7%D0%B0%D0%BF%D1%80%D0%BE%D1%81%D1%8B">https://www.google.com/search?client=firefox-b-d&q=%D1%87%D1%82%D0%BE+%D1%82%D0%B0%D0%BA%D0%BE%D0%B5+get+post+%D0%B7%D0%B0%D0%BF%D1%80%D0%BE%D1%81%D1%8B</a></span>
+        </div>
+        <hr>
+        <h2>Ошибки/Доработки</h2>
+        <div>
+            <ul>
+                <li>1. UserController actionIndex. Всегда нужно стараться отедлить html от кода. Не хранить его в классах. Будем использовать схему /views/контроллер/действие. То есть выносим форму в файл /views/user/index.php и в нашем действие его инклудим.</li>
+                <li>2. Сервис getUsers.<br>
+                    1. Стараемся придерживаться правильного нейминга. Сейчас у тебя имя метода getUsers как бы намекает что результат должен быть несколько пользователей, по факту у тебя ищет одного. Нужно или создать отдельный метод getUser() который юзать, или переименовать этот.<br>
+                    2. echo 'Нет такого!'; Вот эта логика не должна находится в этом методе. Задача метода вернуть пользователя или вернуть ничего. Какая там логика отображения и что происходит должно быть описано в контроллере. Привожу пример. В этом месте мы обращаемся к getUsers и если там ничего нет мы пишем "нет такого", а в другом месте мы опять берем пользователя для каких-то целей, но если его нет то нам нужно уже что-то другое сделать (например ничего). И нахрена нам эта надпись в такой ситуации? getUsers возвращает нам пользователей, больше он ничего не делает.<br>
+                </li>
+                <li>
+                    3. Dao getUsers(). Запросы в бд очень ценный ресурс. Во первых это долго, во вторых бд имеет лимит нагрузки (к-во одновременных запросов), в третьих есть еще канал передачи данных по которому данные с бд идут к сайту. Все это заставляет нас максимально оптимизировать запросы к бд.<br>
+                    Сейчас ты вытягиваешь ВСЕХ юзеров с бд и потом циклом проверяешь совпадения логинпасса. Это не страшно если у тебя 4 юзера в бд. А если их там 1кк? Будешь вытягивать 1кк и проганять циклом что бы найти одного? Это не ок.<br>
+                    Для этого в языке sql есть такой операнд как WHERE в котором ты описываешь условия выборки. <br>
+                    Нужно погуглить про where и с бд вытянуть только ту запись которая соотвествует логинапасу.<br>
+                    Если у тебя предполагается более одной записи из бд юзай fetchAll, а если одна то fetch. Не нужно юзать fetch с циклом для вытягивания многих записией.<br>
+                    И по циклу while старайся его не юзать вообще, если нет необходимости. Там где можно форычить, форычим. Предпочтение foreach, потом for, потом while. Так они идут в порядке удобства чтения кода и понимания.
+                </li>
+            </ul>
         </div>
     </body>
 </html>
