--- a/views/tasks/9.html
+++ b/views/tasks/9.html
@@ -28,8 +28,10 @@ and open the template in the editor.
             <ul>
                 <li>1. UserController actionIndex. Всегда нужно стараться отедлить html от кода. Не хранить его в классах. Будем использовать схему /views/контроллер/действие. То есть выносим форму в файл /views/user/index.php и в нашем действие его инклудим.</li>
                 <li>2. Сервис getUsers.<br>
-                    1. Стараемся придерживаться правильного нейминга. Сейчас у тебя имя метода getUsers как бы намекает что результат должен быть несколько пользователей, по факту у тебя ищет одного. Нужно или создать отдельный метод getUser() который юзать, или переименовать этот.<br>
+                    1. Стараемся придерживаться правильного нейминга. Сейчас у тебя имя метода getUsers как бы намекает что результат должен быть несколько пользователей, по факту у тебя ищет одного. Нужно или создать отдельный метод getUser() который юзать, или переименовать этот.
+                    <p>- Re: Осталось от предыдущего, когда выводилать пачка массивов. Надо следить за именами переменных и методов при изменениии кода.</p>
                     2. echo 'Нет такого!'; Вот эта логика не должна находится в этом методе. Задача метода вернуть пользователя или вернуть ничего. Какая там логика отображения и что происходит должно быть описано в контроллере. Привожу пример. В этом месте мы обращаемся к getUsers и если там ничего нет мы пишем "нет такого", а в другом месте мы опять берем пользователя для каких-то целей, но если его нет то нам нужно уже что-то другое сделать (например ничего). И нахрена нам эта надпись в такой ситуации? getUsers возвращает нам пользователей, больше он ничего не делает.<br>
+                    <p>-Re: Теперь стало понянтнее про упрощение методов</p>
                 </li>
                 <li>
                     3. Dao getUsers(). Запросы в бд очень ценный ресурс. Во первых это долго, во вторых бд имеет лимит нагрузки (к-во одновременных запросов), в третьих есть еще канал передачи данных по которому данные с бд идут к сайту. Все это заставляет нас максимально оптимизировать запросы к бд.<br>
@@ -37,9 +39,15 @@ and open the template in the editor.
                     Для этого в языке sql есть такой операнд как WHERE в котором ты описываешь условия выборки. <br>
                     Нужно погуглить про where и с бд вытянуть только ту запись которая соотвествует логинапасу.<br>
                     Если у тебя предполагается более одной записи из бд юзай fetchAll, а если одна то fetch. Не нужно юзать fetch с циклом для вытягивания многих записией.<br>
+                    <p>- Re: Более-менее разобрался в том, что написано в UserDao. </p>
                     И по циклу while старайся его не юзать вообще, если нет необходимости. Там где можно форычить, форычим. Предпочтение foreach, потом for, потом while. Так они идут в порядке удобства чтения кода и понимания.
                 </li>
             </ul>
+            <p> - Re: Это нормально, что RouteService::getRoute вызывается по 5 раз при одном запросе?
+              <p>  "Если что-то не ясно, сразу вспоминаем гугл и смотрим/читаем" для того что бы что-то загуглить, нужно хоть что-то понять. Если просто загуглить "запросы $_GET, $_POST" вывалит тучу и инфы, и говна. А говна вываливает значительно больше, и в инфе еще есть устаревшие данные. Из оставшегося часть излагается в форме, пока, мне не доступной. "Напишите так и будет работать." - ну работает, а что происходит при этом хз, и если нужно внести мелкие правки хз куда и что. А чаще бывает что копируешь код, вставляешь, а он не работает. У него работает, а у меня то же самое нет. 
+              </p>
+              <p>"Предпочтение foreach, потом for, потом while", "Всегда нужно стараться отедлить html от кода" - вот как можно дойти до мысли загуглить подобное? Разве что случайно где-то наткнутся.
+
         </div>
     </body>
 </html>
