--- a/views/tasks/task5.html
+++ b/views/tasks/task5.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <ul>
-            <li>1. Что за nbproject в папке web? У тебя что, проект в папке web имеет корень? Приложи скрин дерева проекта своего. Типа такого <img src="/img/5_0.png" width="250">
+            <li>1. Что за nbproject в папке web? У тебя что, проект в папке web имеет корень? Приложи скрин дерева проекта своего. Типа такого <img src="/images/5_0.png" width="250">
             <li><p><font color = 'red'>
                     Таки был косяк. Удалил nbproject из web, а после перезапуска NB она там опять появилась.
                 <p><font color = 'black'>
@@ -16,7 +16,7 @@
                     <li><p><font color = 'red'>
                             Кажись поправил.
                         <p><font color = 'black'>
-                            <br><img src="/img/5_1.png" width="250">
+                            <br><img src="/images/5_1.png" width="250">
                     <li>1.2. Почитать про файл .gitignore. Познакомиться с ним. Все что связанно с нетбинс не включаем в репозиторий. И вообще у тебя не должно быть физически в твоей папке /web/nbproject/ Иначе у тебя не правильно будет работать проект, и ты не получиш главных фич нетбинса. Я гляну потом по тимвьювер работает ли ок</li>
                     <li><p><font color = 'red'>
                             Тут ты уже дописал в .gitignore
@@ -28,8 +28,8 @@
                             <li>1.3.1. Создать его</li>
                             <li>1.3.2. Для такого функционала я не хочу создавать обьект. Почитать про статические свойства и методы (static)</li>
                             <li>1.3.3. Создать статический метод getImgTag() Куда можно передавать параметры: имя изображения, расширение (по умолчанию делаем png, значение по-умолчанию задаем непосредственно в аргументе когда описываем метод), ширину (по умолчанию 250px), высоту (не обязательный аргумент)</li>
-                            <li>1.3.4. Метод должен вернуть мне строку типа такой &lt;img src="/img/5_0.png" width="250"&gt;. То есть я даю методу имя файла и ехая результат у меня отрисует картинку сразу.</li>
-                            <li>1.3.5. Внутри должен быть метод getImgFolderPath(). По-умолчанию он возвращает /img/. Он будет юзаться в нашем getImgTag поянтное дело.</li>
+                            <li>1.3.4. Метод должен вернуть мне строку типа такой &lt;img src="/images/5_0.png" width="250"&gt;. То есть я даю методу имя файла и ехая результат у меня отрисует картинку сразу.</li>
+                            <li>1.3.5. Внутри должен быть метод getImgFolderPath(). По-умолчанию он возвращает /images/. Он будет юзаться в нашем getImgTag поянтное дело.</li>
                             <li><p><font color = 'red'>
                                     Не догнал зачем getImgFolderPath()? Я попытался с его помощью реализовать возможность закидывать адресс другой папки с последующим выводом картинки из нового места, но у меня не получилось.
                                 <p><font color = 'black'>
