--- a/views/tasks/task10.html
+++ b/views/tasks/task10.html
@@ -1,25 +1,9 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>
-            По предыдущему. А чего вардампишь юзера в маппере? getUser должен возвращать юзера в контроллер, и уже там вардампить. <span class="re">Осталось от предыдущего. Не могу я пока на столько следить за изменениями в коде.</span> В остальном ОК.<br>
-            Теперь давай немного отвлечемся, надо выбрать какой-то шаблон на котором будем отображать наши поделки, а то на эту белую простыню с буквами уже надоело смотреть.<br>
-            Сейчас в сайтостроях в основном используются готовые фреймворки css. Можешь почитать что такое Фреймворк, в пхп мы тоже в итоге придем к одному для изучения. Если кратко то это набор уже готового кода, который постоянно все используют во всех проектах. Касательно цсс то тут стили кнопок, таблиц, сеточная система, шрифты, цвета. В общем все сразу есть для использования с документацией итд.<br>
-            Самые популярные bootstrap, materialize, foundation. Мы будем юзать бустрап https://getbootstrap.com/. Можешь посмотреть какие-то видосы че это такое. Не упарываться, просто что бы было понимание.<br>
-            Дальше, надо найти готовый шаблон сайта (template). Грубо говоря html + css который кто-то уже нарисовал, мы его просто себе возьмем, и будем его юзать. Для этого гугли free templates bootstrap 4 ecommerce (желательно конечно 4 версия, но 3я тоже в принципе пойдет).<br>
-            Вот вроде бы ок ссылка. <span class="re">Хм... ссылка? ))</span> Выбирай какой больше нравится,  нам нужно что бы была страница с какими-то товарами, если есть страница с корзиной, заказ то вообще збс. <span class="re">А толкового ничего и нет, такого что бы не бесило. Но тут ведь главное понять принцип, а стили и подправить можно будет. Да и этот шаблон был с ошибками, на часть из которых указал НБ, а вот с маршрутами пришлось посидеть (в корне работает, а дальше не работает) - всего то слеши надо было добавить в начале всех маршрутов и стили прикрутились. </span><br>
-            Качаешь его. У тебя там будет архив сайта грубо говоря. Вот задача ща что бы у нас по индексу (так называют главную страницу например http://mymagaz.local) отображался выбраннный тобой шаблон.
-            P.s. Давай уберем эту простыню с методов которые выполняются. Или тебе оно надо для дебага? <span class="re">Нужны были для понимания как и что за чем отрабатывает. <br> Пока туплю как интегрировать то, что уже есть в данный шаблон. В частности не пойму как, к примеру, вывести текст таска в конкретном месте хтмл. Выводит его TaskController. Можно не выводить, а вернуть. Но вернется оно в RouteService. А как дальше до индекса?</span>
-        </div>
-    </body>
-</html>
+<div>            По предыдущему. А чего вардампишь юзера в маппере? getUser должен возвращать юзера в контроллер, и уже там вардампить. <span class="re">Осталось от предыдущего. Не могу я пока на столько следить за изменениями в коде.</span> В остальном ОК.<br>
+    Теперь давай немного отвлечемся, надо выбрать какой-то шаблон на котором будем отображать наши поделки, а то на эту белую простыню с буквами уже надоело смотреть.<br>
+    Сейчас в сайтостроях в основном используются готовые фреймворки css. Можешь почитать что такое Фреймворк, в пхп мы тоже в итоге придем к одному для изучения. Если кратко то это набор уже готового кода, который постоянно все используют во всех проектах. Касательно цсс то тут стили кнопок, таблиц, сеточная система, шрифты, цвета. В общем все сразу есть для использования с документацией итд.<br>
+    Самые популярные bootstrap, materialize, foundation. Мы будем юзать бустрап https://getbootstrap.com/. Можешь посмотреть какие-то видосы че это такое. Не упарываться, просто что бы было понимание.<br>
+    Дальше, надо найти готовый шаблон сайта (template). Грубо говоря html + css который кто-то уже нарисовал, мы его просто себе возьмем, и будем его юзать. Для этого гугли free templates bootstrap 4 ecommerce (желательно конечно 4 версия, но 3я тоже в принципе пойдет).<br>
+    Вот вроде бы ок ссылка. <span class="re">Хм... ссылка? ))</span> Выбирай какой больше нравится,  нам нужно что бы была страница с какими-то товарами, если есть страница с корзиной, заказ то вообще збс. <span class="re">А толкового ничего и нет, такого что бы не бесило. Но тут ведь главное понять принцип, а стили и подправить можно будет. Да и этот шаблон был с ошибками, на часть из которых указал НБ, а вот с маршрутами пришлось посидеть (в корне работает, а дальше не работает) - всего то слеши надо было добавить в начале всех маршрутов и стили прикрутились. </span><br>
+    Качаешь его. У тебя там будет архив сайта грубо говоря. Вот задача ща что бы у нас по индексу (так называют главную страницу например http://mymagaz.local) отображался выбраннный тобой шаблон.
+    P.s. Давай уберем эту простыню с методов которые выполняются. Или тебе оно надо для дебага? <span class="re">Нужны были для понимания как и что за чем отрабатывает. <br> Пока туплю как интегрировать то, что уже есть в данный шаблон. В частности не пойму как, к примеру, вывести текст таска в конкретном месте хтмл. Выводит его TaskController. Можно не выводить, а вернуть. Но вернется оно в RouteService. А как дальше до индекса?</span>
+</div>
