--- a/views/tasks/task8.html
+++ b/views/tasks/task8.html
@@ -1,34 +1,11 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>
-            Поздравляю, ты уже почти все что нужно базового в пхп постиг :) С твоими знаниями уже можно сделать практически любой сайт (со стороны пхп).<br>
-
-            Я нес небольшую правку в usersDao, там где инитим пдо, можешь глянуть. Что бы возвращало только ассоциативный массив с бд. То есть ключи в массиве это имена колонок в таблице, а значения собсно данные.<br>
-            Теперь нужно что бы эти массивы (у нас он пока один, так как пользователь один) переганялись в модели.<br>
-            Мы сделаем специальный класс для этого и назовем его mapper. UserMapper. Создадим папку dao/mapper и в ней делаем такой класс.<br>
-            В нем метод map($data). Дата это массив (1 строка с таблицы user).<br>
-            В методе создаем обьект User и проставляем ему данные с массива, типа user->setId($data['id']), $user->setName($data['name']); и возвращаем этот обьект.<br>
-            Теперь создаем UserService (в папке сервисов) и метод getUsers(), в нем мы будем забирать данные с бд, маппить из в обьекты пользователей и возвращать.<br>
-            То есть в нем создаем дао, загребаем все с таблице пользователей, создаем маппер и маппим данные в обьект, возвращаем массив обьектов юзер. (хоть у нас ща один юзер, он все равно возвращается в массиве).<br>
-            В actionIndex теперь мы создаем только юзерСервис и вызываем $users = $userService->getUsers(); Потом вардампим users;<br>
-            Это то что нужно ща сделать.<br>
-
-            В итоге у нас практически всегда будет такая структура и такая цепочка работы с данными. Там где нам надо мы обращаемся к сервису. Сервис обращается к дао (data access object обьект доступа к данным), данные с помощью маппера переганяем в классы (обьекты) и возвращаем.<br>
-
-
-
-
-        </div>
-    </body>
-</html>
+<div>Поздравляю, ты уже почти все что нужно базового в пхп постиг :) С твоими знаниями уже можно сделать практически любой сайт (со стороны пхп).<br>
+    Я нес небольшую правку в usersDao, там где инитим пдо, можешь глянуть. Что бы возвращало только ассоциативный массив с бд. То есть ключи в массиве это имена колонок в таблице, а значения собсно данные.<br>
+    Теперь нужно что бы эти массивы (у нас он пока один, так как пользователь один) переганялись в модели.<br>
+    Мы сделаем специальный класс для этого и назовем его mapper. UserMapper. Создадим папку dao/mapper и в ней делаем такой класс.<br>
+    В нем метод map($data). Дата это массив (1 строка с таблицы user).<br>
+    В методе создаем обьект User и проставляем ему данные с массива, типа user->setId($data['id']), $user->setName($data['name']); и возвращаем этот обьект.<br>
+    Теперь создаем UserService (в папке сервисов) и метод getUsers(), в нем мы будем забирать данные с бд, маппить из в обьекты пользователей и возвращать.<br>
+    То есть в нем создаем дао, загребаем все с таблице пользователей, создаем маппер и маппим данные в обьект, возвращаем массив обьектов юзер. (хоть у нас ща один юзер, он все равно возвращается в массиве).<br>
+    В actionIndex теперь мы создаем только юзерСервис и вызываем $users = $userService->getUsers(); Потом вардампим users;<br>
+    Это то что нужно ща сделать.<br>
+    В итоге у нас практически всегда будет такая структура и такая цепочка работы с данными. Там где нам надо мы обращаемся к сервису. Сервис обращается к дао (data access object обьект доступа к данным), данные с помощью маппера переганяем в классы (обьекты) и возвращаем.</div>
