beginningCMS_and_uploadProductImage

--- a/views/tasks/task13.html
+++ b/views/tasks/task13.html
@@ -27,7 +27,11 @@
 Переходим к товарам.
 1. Делаем страницу создания/редактирвоания товара
 2. Пока добавляем возможность ввести имя товара и выбрать категорию. Категория выбирается из селекта такого же по сути как родителя категории выбираем.
-3. На фронте сейчас категории у нас имеют какие-то ссылки текстовые https://monosnap.com/file/30Y74mRcqw6DvqEi9N0ju0rtT143kk . Нужно сделать что бы ссылки были /catalog/id категории/ , например /catalog/5/
+3. На фронте сейчас категории у нас имеют какие-то ссылки текстовые 
+
+<img src="/images/tasks/13_6.jpg" width="500" >
+
+Нужно сделать что бы ссылки были /catalog/id категории/ , например /catalog/5/
 4. При переходе на такую страницу просто выводим все товары категории. Пока просто делаем <xmp class="codetext"><ul> в котором в каждом <li></xmp> отображем тайтл товара
 
 Да, важный момент. Один и тот же товар может быть в нескольких категориях. То есть делай селект мультипл
