--- a/web/css/adminStyle.css
+++ b/web/css/adminStyle.css
@@ -11,7 +11,7 @@ a:hover {
 img {
     width: 100%;
 }
-.colour{
+.color{
     display: inline-block;
     margin-top: 10px;
     text-align: center;
